--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <h1>Lucas Barbosa</h1>
-    <script src="script.js"></script>
 
+    <header class="container">
+        <h1 id="demo">Empresa</h1>
+    </header>
+    <main></main>
+    <footer>
+        <section></section>
+        <section></section>
+        <section></section>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
